# simpherabridge

./: .gitmodules  Dockerfile  LICENSE.txt  ReadMe.md  ThirdParty.txt
.github/: CODEOWNERS
ros2_bridge_ws/src/sut_te_bridge/: CMakeLists.txt  package.xml
ros2_bridge_ws/src/sut_te_bridge/cmake/: FindGEOS.cmake
ros2_bridge_ws/src/sut_te_bridge/include/: bridge.h
ros2_bridge_ws/src/sut_te_bridge/include/V-ESI-API/include/: DsTCompositeHeader.h  PP_Radar_Detections_Base_Detection.h  PP_Radar_PropagationPaths_DeserializerDataTypes.h  PP_Radar_RawDataGen_DeserializerDataTypes.h  SensorBaseHeader.h  VESIRestbus.h
ros2_bridge_ws/src/sut_te_bridge/include/sut-te-bridge/: ASMBus_renamed.h  VESIResultData.h
ros2_bridge_ws/src/sut_te_bridge/src/: bridge.cpp
ros_ws_aux/src/autonoma_msgs/: CMakeLists.txt
ros_ws_aux/src/autonoma_msgs/msg/: GroundTruth.msg  Push2Pass.msg  RaceControl.msg  ToRaptor.msg  VehicleInputs.msg
ros_ws_aux/src/can_bridge/: CMakeLists.txt  package.xml
ros_ws_aux/src/can_bridge/cmake/: FindALGLIB.cmake
ros_ws_aux/src/can_bridge/config/: CAN1-INDY-V17.dbc
ros_ws_aux/src/can_bridge/include/: bridge.h
ros_ws_aux/src/can_bridge/include/V-ESI-API/include/: CameraDataDeserializerBase.h  CameraDataDeserializerDefault.h  DsHostDeviceMacro.h  VESIResultData.h
ros_ws_aux/src/can_bridge/include/can_bridge/: canid_enum.hpp  multiword_types.h
ros_ws_aux/src/can_bridge/src/: bridge.cpp
ros_ws_aux/src/novatel_oem7_msgs/msg/: Oem7Header.msg
ros_ws_aux/src/novatel_oem7_msgs_/: CMakeLists.txt  package.xml
ros_ws_aux/src/novatel_oem7_msgs_/msg/: AccessStatus.msg  BESTGNSSPOS.msg  GeogatingStatus.msg  LocalAreaStatus.msg  ObservationStatus.msg  Oem7Header.msg  PPPPOS.msg  RegionRestriction.msg  SolutionStatus.msg  SubscriptionPermission.msg  SubscriptionType.msg  SyncState.msg  TERRASTARINFO.msg  TERRASTARSTATUS.msg  TRACKSTAT.msg  TrackStatChannel.msg
ros_ws_aux/src/npc_controller_msgs/: CMakeLists.txt  package.xml
ros_ws_aux/src/npc_controller_msgs/msg/: CtReport.msg  NPCDebug.msg  PtReport.msg  RcToCt.msg
ros_ws_aux/src/raptor_dbw_msgs/raptor_dbw_can/: CMakeLists.txt  package.xml
ros_ws_aux/src/raptor_dbw_msgs/raptor_dbw_can/include/raptor_dbw_can/: DbwNode.hpp  dispatch.hpp
ros_ws_aux/src/raptor_dbw_msgs/raptor_dbw_can/launch/: raptor_dbw_can_launch_entire.py
ros_ws_aux/src/raptor_dbw_msgs/raptor_dbw_can/src/: DbwNode.cpp
ros_ws_aux/src/raptor_dbw_msgs/raptor_dbw_msgs/: CMakeLists.txt
ros_ws_aux/src/raptor_dbw_msgs/raptor_dbw_msgs/msg/: DiagnosticReport.msg  MotecReport.msg  SpaceDrive.msg
runtime_scripts/: ros2build  ros2run
scripts/: build_bridge.sh  build_bridge_foxglove.sh
sut-te-bridge/ros2_bridge_ws/src/sut_te_bridge/include/: bridge.h  iac_qos.h
sut-te-bridge/ros2_bridge_ws/src/sut_te_bridge/include/V-ESI-API/include/: AtomicSensorInformation.h  CameraDataDeserializerTypes.h  OptixMaterial.h  PP_Lidar_PointCloud_DeserializerDataTypes.h  PP_Radar_Detections_DeserializerDataTypes.h  PP_USS_PropagationPaths_DeserializerDataTypes.h  SemanticSegmentationIds.h  VESIAPI.h
sut-te-bridge/ros2_bridge_ws/src/sut_te_bridge/include/sut-te-bridge/: RaceControlInterface.h  rtwtypes.h
sut-te-bridge/ros2_bridge_ws/src/sut_te_bridge/launch/: ReadMe.md
sut-te-bridge/ros2_bridge_ws/src/sut_te_bridge/src/: bridge.cpp
