<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sut_te_bridge</name>
  <version>0.1.0</version>
  <description>This package exchanges signals between ASM and ROS. Therefor V-ESI messages are translated into ROS2 messages and vice versa.</description>
  <maintainer email="cgiest@dspace.de">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autonoma_msgs</depend>
  <depend>vectornav_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>npc_controller_msgs</depend>
  <depend>foxglove_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
